# hlaconcord

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  PLAN.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/s1/: s1.genotype.json  s1_final.result.txt
packaging/bioconda/: meta.yaml
src/hlaconcord/: __init__.py  cli.py  db.py  gl.py  model.py  normalize.py  pipeline.py  report.py  tidy.py
src/hlaconcord/nomenclature/: __init__.py  base.py
src/hlaconcord/parsers/: __init__.py  arcashla.py  hla_la.py  optitype.py
src/hlaharm/: __init__.py  concordance.py
src/hlaharm/nomenclature/: base.py  inhouse.py  models.py  reference.py
src/hlaharm/parsers/: hla_hd.py
tests/: conftest.py  test_cli.py  test_concordance.py  test_db.py  test_gl.py  test_inhouse.py  test_normalize_tidy.py  test_oracle.py  test_parse.py  test_parsers.py  test_parsers_m3.py  test_pipeline.py
tests/fixtures/db_3550/: Allelelist.txt  Allelelist_history.txt  hla_nom_g.txt  hla_nom_p.txt
tests/fixtures/hla_la/: s1_bestguess_G.txt
tests/fixtures/optitype/: s1_result.tsv
